# hsilibs

./: .gitignore  CMakeLists.txt
cmake/: hsilibsConfig.cmake.in
config/: hsi.data.xml
include/hsilibs/: HSIEventSender.hpp  Issues.hpp  Types.hpp
integtest/: README.md  iceberg_real_hsi_test.py
plugins/: FakeHSIEventGenerator.cpp  FakeHSIEventGenerator.hpp  FakeHSIEventGeneratorModule.cpp  FakeHSIEventGeneratorModule.hpp  HSIController.cpp  HSIController.hpp  HSIDataHandlerModule.cpp  HSIDataHandlerModule.hpp  HSIDataLinkHandler.cpp  HSIDataLinkHandler.hpp  HSIReadout.cpp  HSIReadout.hpp
schema/hsilibs/: fakehsieventgeneratorinfo.jsonnet  hsi.schema.xml  hsicontroller.jsonnet
src/: HSIEventSender.cpp  HSIFrameProcessor.cpp  HSIFrameProcessor.hpp
test/config/: dts-hsi.data.xml
test_config/: .test_connections.xml  boot.json
